# hot-jupiter

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  main.py  merge_parquet_batches.py  plot.py  profile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
clusters/: __init__.py  cluster.py  plummer.py
clusters/profiles/: __init__.py  plummer.py
examples/: ex_approx.py  ex_cluster.py  ex_diffusion.py  ex_kepler_approx.py  ex_model_params.py  ex_rand_utils.py  ex_v_infty_dependence.py
examples/47tuc/: 47tuc_results.ipynb  47tuc_run.ipynb  results.ipynb  run.ipynb
hj/: __init__.py  clusters.py  config.py  core.py  evolution.py  model.py  results.py  sampling.py  state.py
hjmodel/: __init__.py  cluster.py  config.py  core.py  encounters.py  evolution.py  fixed_cluster.py  hjmodel.py  io.py  model_utils.py  processor.py  rand_utils.py  random_sampler.py  results.py  sampling.py
hjmodel/clusters/: __init__.py  plummer.py
hjmodel/clusters/profiles/: plummer.py
hjmodel/utils/: dask.py
tests/: conftest.py  show_final_outcomes.py  test_approx.py  test_cluster.py  test_config.py  test_core.py  test_distributions.py  test_evolution.py  test_hjmodel.py  test_kepler_approx.py  test_rand_utils.py  test_results.py  test_v_infty_dependence.py  try_asymmetry.py  try_diffusion.py  try_ionisation.py  try_model_param.py  try_v_infty_dependence.py  vary_model_param.py
tests/test_data/test_approx_data/: test_approx_1.266.pq
tests/test_data/test_model_param_data/: analytic_results.py
