[project]
name = "hot-jupiter"
version = "0.1.0"
description = "Modeling and simulating hot Jupiter evolution"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hjmodel", "clusters"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
