[project]
name = "hot-jupiter"
version = "0.1.0"
description = "MC simulations of HJ Formation in dense stellar clusters"
authors = [{ name = "James Wirth" }]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hjmodel"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
